# csci3150-asg3

./: .gitignore  CMakeLists.txt  Makefile  README.md  asg3-openmp  asg3-openmp.c  asg3-pthread  asg3-pthread.c  read  testGrader.sh  util.c
testcases/C0/: README  input1.txt  input2.txt
testcases/C1/: README  expected.txt  input1.txt  input2.txt
testcases/C10/: README  input1.txt  input2.txt
testcases/C11/: input1.txt  input2.txt
testcases/C12/: README  expected.txt  input1.txt  input2.txt
testcases/C2/: README  input1.txt
testcases/C3/: README  expected.txt  input2.txt
testcases/C4/: input2.txt
testcases/C5/: README  input2.txt
testcases/C6/: expected.txt  input1.txt
testcases/C7/: expected.txt  input1.txt  input2.txt
testcases/C8/: expected.txt  input1.txt  input2.txt
testcases/C9/: README  expected.txt  input1.txt  input2.txt
v1/: Makefile  asg3-openmp  asg3-pthread.c  csci3150_asg3_release_pthread.exe.stackdump  demo-serial  gdb.exe.stackdump  grader.sh
v2/: Makefile  asg3-openmp  asg3-openmp.c  asg3-pthread  asg3-pthread.c  asg3-pthread.exe.stackdump  csci3150_asg3_release_pthread_v2.exe.stackdump  grader.sh
